<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingVertical="20dp"
        tools:context=".ui.settings.SettingsFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_horizontal_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="0dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_horizontal_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="100dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_horizontal_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="200dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_horizontal_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="300dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_horizontal_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="400dp" />

        <View
            android:layout_width="match_parent"
            style="@style/Divider"
            app:layout_constraintTop_toBottomOf="@+id/guideline_horizontal_0"/>

        <View
            android:layout_width="match_parent"
            style="@style/Divider"
            app:layout_constraintTop_toBottomOf="@+id/guideline_horizontal_1"/>

        <View
            android:layout_width="match_parent"
            style="@style/Divider"
            app:layout_constraintTop_toBottomOf="@+id/guideline_horizontal_2"/>

        <View
            android:layout_width="match_parent"
            style="@style/Divider"
            app:layout_constraintTop_toBottomOf="@+id/guideline_horizontal_3"/>

        <View
            android:layout_width="match_parent"
            style="@style/Divider"
            app:layout_constraintTop_toBottomOf="@+id/guideline_horizontal_4"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_timezone"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/guideline_horizontal_2"
            app:layout_constraintBottom_toTopOf="@id/guideline_horizontal_3"
            android:paddingHorizontal="45dp"
            android:clickable="true"
            android:background="?selectableItemBackground">

            <TextView
                android:id="@+id/text_timezone_update_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Theme.FZNAlarm.Text_Description"
                android:text="@string/timezone_update_description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/text_city"
                app:layout_constraintVertical_chainStyle="packed"/>

            <TextView
                android:id="@+id/text_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Theme.FZNAlarm.Text_Description"
                android:text="Perth"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_timezone_update_description"
                app:layout_constraintBottom_toTopOf="@id/text_timezone_update"/>

            <TextView
                android:id="@+id/text_timezone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Theme.FZNAlarm.Text_Description"
                android:text="(Beijing+0:00)"
                app:layout_constraintStart_toEndOf="@id/text_city"
                app:layout_constraintTop_toTopOf="@id/text_city"
                app:layout_constraintBottom_toBottomOf="@id/text_city"
                android:layout_marginStart="3dp"/>

            <TextView
                android:id="@+id/text_timezone_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Theme.FZNAlarm.Text_Settings"
                android:text="On"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_city"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="5dp"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_alarm_reminder"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/guideline_horizontal_0"
            app:layout_constraintBottom_toTopOf="@id/guideline_horizontal_1"
            android:paddingHorizontal="45dp"
            android:background="?selectableItemBackground"
            android:clickable="true">

            <TextView
                android:id="@+id/text_alarm_reminder_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alarm_reminder"
                android:theme="@style/Theme.FZNAlarm.Text_Description"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/text_alarm_reminder_time"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintVertical_chainStyle="packed"/>

            <TextView
                android:id="@+id/text_alarm_reminder_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="5 Minutes"
                android:theme="@style/Theme.FZNAlarm.Text_Settings"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_alarm_reminder_description"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="3dp"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_volume"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingStart="33dp"
            app:layout_constraintBottom_toTopOf="@id/guideline_horizontal_2"
            app:layout_constraintTop_toBottomOf="@id/guideline_horizontal_1">

            <TextView
                android:id="@+id/text_volume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Theme.FZNAlarm.Text_Description"
                android:text="@string/alarm_volume"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/slider_volume"
                android:paddingStart="12dp"
                app:layout_constraintVertical_chainStyle="packed"/>

            <com.google.android.material.slider.Slider
                android:id="@+id/slider_volume"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_volume"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/button_test_alarm_volume"
                app:layout_constraintHorizontal_chainStyle="packed"
                android:stepSize="0"
                app:tickVisible="false"
                android:layout_marginEnd="24dp"/>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/button_test_alarm_volume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#DADADA"
                android:src="@drawable/ic_gong"
                app:borderWidth="0dp"
                app:fabCustomSize="45dp"
                android:layout_marginEnd="39dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/slider_volume"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingHorizontal="45dp"
            app:layout_constraintBottom_toTopOf="@id/guideline_horizontal_4"
            app:layout_constraintTop_toBottomOf="@id/guideline_horizontal_3">

            <TextView
                android:id="@+id/text_suggestions_description"
                style="@style/Theme.FZNAlarm.Text_Description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/suggestions_description"
                app:layout_constraintBottom_toTopOf="@id/text_email"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/text_email"
                style="@style/Theme.FZNAlarm.Text_Description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="email"
                android:text="d.k.developer@outlook.com"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_suggestions_description" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
